objects/AIA_Network__c.object
<CustomObject>
    <fields>
        <fullName>BD_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BD Products</label>
        <referenceTo>AIA_Benefit_Design_Product__c</referenceTo>
        <relationshipLabel>Network</relationshipLabel>
        <relationshipName>Network</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Plan RuntTime Network</relationshipLabel>
        <relationshipName>Plan_RunTime_Network</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Proposed_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Proposed Products</label>
        <referenceTo>Proposed_Products__c</referenceTo>
        <relationshipLabel>Network</relationshipLabel>
        <relationshipName>Network</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Network</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Network</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>